# storage/api-docs/api-docs.json
@@ -263,6 +263,17 @@
                             "type": "integer",
                             "example": 1
                         }
+                    },
+                    {
+                        "name": "tree",
+                        "in": "path",
+                        "description": "get tree",
+                        "required": false,
+                        "schema": {
+                            "type": "boolean",
+                            "default": 0,
+                            "example": 1
+                        }
                     }
                 ],
                 "responses": {
